--- a/docs/index.yaml
+++ b/docs/index.yaml
@@ -1,4 +1,4 @@
-# This stuff ends up here: https://catalog.githubapp.com/services/help-docs/docs
+# his stuff ends up here: https://catalog.githubapp.com/services/help-docs/docs
 
 version: 1
 links:
